# LPFT

./: .gitignore  AVVIO.md  README.md  package-lock.json  package.json
agentic-finance-exchange/: .env.example  .gitignore  README.md  afx  package-lock.json  package.json  tsconfig.json  tsconfig.scripts.json
agentic-finance-exchange/prisma/: schema.prisma
agentic-finance-exchange/scripts/: sweeper.ts
apps/web/: dump.rdb  env.local.template  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs
docs/: DEPLOY_ARBITRUM_SEPOLIA.md  QUANT_ENGINES.md  UNIFIED_EXCHANGE.md  chat-file-links.md
infra/: README.md  docker-compose.yml
scripts/: generate-technical-report-pdf.py  start-lpft.sh  technical_report_content.py  technical_report_diagrams.py
services/api/: .env.example  Dockerfile  README.md  env.local.template  lpft.db  pyproject.toml  run-api.sh
services/api/lpft_api/: __init__.py  assistant.py  capabilities.py  config.py  db.py  dsl.py  inline_backtest.py  intent_publisher.py  llm.py  main.py  market_data.py  program_llm.py  queue.py  schemas.py  strategy_spec_tool.py  tier1_routes.py
services/api/lpft_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/api/tests/: test_strategy_engine.py  test_tier1_validation.py
services/worker/: Dockerfile  pyproject.toml
services/worker/lpft_worker/: __init__.py  backtest.py  config.py  data.py  db.py  jobs.py  programs.py  worker.py
services/worker/lpft_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+290 files in other folders)
