[project]
name = "lpft-api"
version = "0.1.0"
description = "LPFT API (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlmodel>=0.0.14",
  "redis>=5.0",
  "rq>=1.16",
  "pandas>=2.0",
  "yfinance>=0.2",
  "httpx>=0.27",
  "anthropic>=0.39",
  "psycopg[binary]>=3.1",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lpft_api*"]
