[project]
name = "lpft-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "rq>=1.16",
  "redis>=5.0",
  "sqlmodel>=0.0.14",
  "pandas>=2.0",
  "numpy>=1.24",
  "yfinance>=0.2",
  "pydantic-settings>=2.2",
  "psycopg[binary]>=3.1",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lpft_worker*"]
